config/1-envoy-localitylb.yaml
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: backend
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: backend
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    outlier_detection:
      interval: "1s"
      consecutive_5xx: "1"
      consecutive_gateway_failure: "1"
      base_ejection_time: "10s"
      enforcing_consecutive_gateway_failure: "100"
      max_ejection_percent: "100"
    load_assignment:
      cluster_name: backend
      endpoints:
      - locality:
          region: local
          zone: zone-1
        load_balancing_weight: 1
        priority: 0 # highest
        lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: endpoint1
                  port_value: 8080
              hostname: endpoint1
      - locality:
          region: local
          zone: zone-2
        load_balancing_weight: 1
        priority: 1
        lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: endpoint2
                  port_value: 8080
              hostname: endpoint2
      - locality:
          region: remote
          zone: zone-1
        load_balancing_weight: 1
        priority: 1
        lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: endpoint3
                  port_value: 8080
              hostname: endpoint4
      - locality:
          region: remote
          zone: zone-2
        load_balancing_weight: 1
        priority: 2
        lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: endpoint4
                  port_value: 8080
              hostname: endpoint4
